pequenos ajustes